<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_ic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ic"
        android:text="@string/check_ic" />

    <Button
        android:id="@+id/btn_nfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="nfc"
        android:text="@string/check_nfc" />

    <Button
        android:id="@+id/btn_conn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="conn"
        android:text="@string/connect" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>