<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/transactType"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="transactType" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="amount" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="init"
        android:text="@string/initialization" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="prepareTransaction"
        android:text="@string/ready_transaction" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="transactProcess"
        android:text="@string/transaction_processing" />

    <TextView
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
